--- a/day01/ex03/Makefile
+++ b/day01/ex03/Makefile
@@ -10,12 +10,13 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = zombieHorde
+NAME = violence
 
 DIR_OBJ = ./
 
-SRCS	=   ZombieHorde.cpp \
-			Zombie.cpp \
+SRCS	=   Weapon.cpp \
+			HumanA.cpp \
+			HumanB.cpp \
 			main.cpp \
 
 OBJS	= $(SRCS:.cpp=.o)
