--- a/day01/ex06/CMakeLists.txt
+++ b/day01/ex06/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
 
-project(zombieHorde)
+project(karenFilter)
 
 set(PATH ./)
 
@@ -15,4 +15,4 @@ set(SOURCE_FILES ${MY_SRCS})
 LINK_DIRECTORIES(./)
 
 # Add executable target with source files listed in SOURCE_FILES variable
-add_executable(zombieHorde ${SOURCE_FILES})
+add_executable(karenFilter ${SOURCE_FILES})
