--- a/day01/ex04/Makefile
+++ b/day01/ex04/Makefile
@@ -10,13 +10,11 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = zombieHorde
+NAME = replace
 
 DIR_OBJ = ./
 
-SRCS	=   ZombieHorde.cpp \
-			Zombie.cpp \
-			main.cpp \
+SRCS	=   main.cpp \
 
 OBJS	= $(SRCS:.cpp=.o)
 
